--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Doboom</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,16 +13,41 @@
 	<link rel="stylesheet" href="css/boom.css" />
 
 </head>
+
 <body>
 	<nav>
-	<div class="wrapper">
-		<a class="logo">Doboom</a>
-		<ul class="right">
-			<li><a>test</a></li>
-			<li><a>test</a></li>
-			<li class="item"><a>test</a></li>
-		</ul>
-</div>
+		<div class="wrapper">
+			<a class="logo">Doboom</a>
+			<ul class="right">
+				<li><a>test</a></li>
+				<li><a>test</a></li>
+				<li class="item"><a>test</a></li>
+			</ul>
+		</div>
 	</nav>
+
+	<div class="container">
+		<div class="content">
+			<div class="title">
+				Today
+				<div class="tab">
+					<a>Popular</a>
+					<a>Latest</a>
+				</div>
+			</div>
+			<div class="tile">
+				<div class="thumbnail"></div>
+				<div class="tile_content">
+					<div class="tp">test</div>
+					<div class="desc">This is Just a Test~!</div>
+					<div class="tweet"><div class="btn">Button here</div></div>
+				</div>
+			</div>
+		</div>
+		<div class="panel">
+			Hey Panel~
+		</div>
+	</div>
 </body>
+
 </html>
