Profile New Design

--- a/profile.html
+++ b/profile.html
@@ -28,29 +28,123 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="cover"></div>
-	<div class="container">
+	<div class="cover">
 		<div class="user">
-		<div class="thumbnail"><div class="status"></div></div>
-		<div class="name">Soo Xiao Tong<div class="username">@sotong</div></div>
-		<div class="tab">
-			<div class="item">
-				<div class="title">Following</div>
-				<span>12</span>
+			<div class="thumbnail">
+				<div class="status"></div>
 			</div>
-			<div class="item">
-				<div class="title">Followers</div>
-				<span>23</span>
+			<div class="name">Soo Xiao Tong
+				<div class="username">@sotong</div>
 			</div>
-			<div class="item">
-				<div class="title">Like</div>
-				<span>5</span>
+			<div class="tab">
+				<div class="item">
+					<div class="title">Following</div>
+					<span>12</span>
+				</div>
+				<div class="item">
+					<div class="title">Followers</div>
+					<span>23</span>
+				</div>
+				<div class="item">
+					<div class="title">Up-Vote</div>
+					<span>5</span>
+				</div>
 			</div>
-		</div>
 		</div>
 	</div>
 	<div class="container">
-		test
+				<div class="panel-right">
+
+			<div class="feed-panel">
+				<div class="feed">
+					<div class="tile">
+						<div class="text">0 Upvotes</div>
+					</div>
+					<div class="tile">
+						<div class="text">5 Topics</div>
+					</div>
+					<div class="tile">
+						<div class="text">0 Collections Made</div>
+					</div>
+					<div class="tile">
+						<div class="text">0 Followed Collections</div>
+					</div>
+				</div>
+			</div>
+
+
+
+
+		</div>
+		<div class="panel-mid">
+			<div class="content">
+				<div class="title">
+					Tasks
+				</div>
+				<div class="tile" id="myBtn">
+					<div class="thumbnail"></div>
+					<div class="tile_content">
+						<div class="tp">test</div>
+						<div class="desc">This is Just a Test~!</div>
+						<div class="tweet">
+							<div class="badge">Lifestyle</div>
+							<div class="msg">1</div>
+							<div class="vote">5</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="panel-left">
+
+			<div class="feed-panel">
+				<div class="title">Organization</div>
+				<div class="feed">
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Tech</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Game</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Books</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Liftstyle</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="feed-panel">
+				<div class="title">Products</div>
+				<div class="feed">
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Tech</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Game</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Books</div>
+					</div>
+					<div class="tile">
+						<div class="thumbnail"></div>
+						<div class="text">Liftstyle</div>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+
 	</div>
 
 
