--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 <body>
 	<nav>
 		<div class="wrapper">
-			<a class="logo">Doboom</a>
+			<a class="logo">Doboom~</a>
 			<form>
 				<input type="text" name="search" placeholder="Search..">
 			</form>
